BP-3367 : fix word wrap on agent message

--- a/src/app/components/agent-reply/agent-reply.component.scss
+++ b/src/app/components/agent-reply/agent-reply.component.scss
@@ -24,7 +24,7 @@
 
     &.bot {
       margin: 16px 24px 0 8px;
-
+      word-break: break-all;
       color: #FFFFFF;
       border-bottom-left-radius: 0;
       background: #30B286;
